# pg-autojoin

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
pg_autojoin/: __init__.py  db.py  join.py  query.py
